--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -31,6 +31,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script type="module" src="assets/js/dashboard.js"></script>
+  <script type="module" src="assets/js/firebase.js"></script>
+
+
 </head>
 
 <body>
@@ -68,7 +72,7 @@
         <li class="nav-item ">
           <p></p>
           <h6 class="fw-medium text-primary-emphasis"> Account number: <br>
-            <span class="fw-light text-secondary-emphasis">858967656757567</span>
+            <span class="fw-light text-secondary-emphasis" id="account-number-sidebar">858967656757567</span>
             </h3>
         </li>
 
@@ -76,13 +80,13 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/images/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourUsername">K. Anderson</span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
               <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <span id="account-number-dropdown"></span>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -222,7 +226,7 @@
                       <i class="bi bi-currency-dollar"></i>
                     </div>
                     <div class="ps-3">
-                      <h6><i class="bi bi-currency-dollar">5,699,433</i></h6>
+                      <h6><i class="bi bi-currency-dollar" id="total-balance">5,699,433</i></h6>
                       <span class="text-success small pt-1 fw-bold">12%</span> <span
                         class="text-muted small pt-2 ps-1">increase</span>
 
@@ -247,7 +251,7 @@
                       <i class="bi bi-bank2"></i>
                     </div>
                     <div class="ps-3">
-                      <h6><i class="bi-currency-dollar">5,335</i></h6>
+                      <h6><i class="bi-currency-dollar" id="checking-balance">5,335</i></h6>
                       <span class="text-warning small pt-1 fw-bold">8%</span> <span
                         class="text-muted small pt-2 ps-1">increase</span>
 
@@ -269,7 +273,7 @@
                       <i class="bi bi-piggy-bank"></i>
                     </div>
                     <div class="ps-3">
-                      <h6><i class="bi-currency-dollar">70,089</i></h6>
+                      <h6><i class="bi-currency-dollar" id="savings-balance">70,089</i></h6>
                       <span class="text-success small pt-1 fw-bold">12%</span> <span
                         class="text-muted small pt-2 ps-1">decrease</span>
                     </div>
