--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,6 +35,13 @@
   <script type="module" src="assets/js/firebase.js"></script>
 
 
+  <!-- Firebase CDN Scripts -->
+  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js"></script>
+
+
+
 </head>
 
 <body>
