--- a/public/pages-login.html
+++ b/public/pages-login.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> / Login - Absa Capital</title>
+  <title>Login - AbsaCapital</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
