--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -89,7 +89,7 @@
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
+              <h6 id="yourEmail"></h6>
               <span id="account-number-dropdown"></span>
             </li>
             <li>
