--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -84,7 +84,7 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/images/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourEmail">           </span>
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourUsername">           </span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -230,7 +230,7 @@
                       <i class="bi bi-currency-dollar"></i>
                     </div>
                     <div class="ps-3">
-                      <h6><i class="bi bi-currency-dollar" id="total-balance">5,699,433</i></h6>
+                      <h6><i class="bi bi-currency-dollar" id="total-balance"></i></h6>
                       <span class="text-success small pt-1 fw-bold">12%</span> <span
                         class="text-muted small pt-2 ps-1">increase</span>
 
@@ -277,7 +277,7 @@
                       <i class="bi bi-piggy-bank"></i>
                     </div>
                     <div class="ps-3">
-                      <h6><i class="bi-currency-dollar" id="savings-balance">70,089</i></h6>
+                      <h6><i class="bi-currency-dollar" id="savings-balance"></i></h6>
                       <span class="text-success small pt-1 fw-bold">12%</span> <span
                         class="text-muted small pt-2 ps-1">decrease</span>
                     </div>
