--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -84,12 +84,12 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/images/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourUsername">           </span>
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourName">           </span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6 id="yourName"></h6>
+              <h6 id="yourEmail"></h6>
               <span id="account-number-dropdown"></span>
             </li>
             <li>
@@ -255,7 +255,7 @@
                       <i class="bi bi-bank2"></i>
                     </div>
                     <div class="ps-3">
-                      <h6><i class="bi-currency-dollar" id="checking-balance">5,335</i></h6>
+                      <h6><i class="bi-currency-dollar" id="checking-balance"></i></h6>
                       <span class="text-warning small pt-1 fw-bold">8%</span> <span
                         class="text-muted small pt-2 ps-1">increase</span>
 
