--- a/public/pages-faq.html
+++ b/public/pages-faq.html
@@ -31,12 +31,13 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-
+  <script type="module" src="assets/js/dashboard.js"></script>
+  <script type="module" src="assets/js/firebase.js"></script>
 </head>
 
 <body>
 
-   <!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
@@ -63,13 +64,13 @@
           </a>
         </li><!-- End Search Icon-->
 
-
         <li class="nav-item ">
           <p></p>
           <h6 class="fw-medium text-primary-emphasis"> Account number: <br>
             <span class="fw-light text-secondary-emphasis">858967656757567</span>
             </h3>
         </li>
+
 
         <li class="nav-item dropdown pe-3">
 
@@ -118,7 +119,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a class="dropdown-item d-flex align-items-center" href="pages-login.html">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
