--- a/public/users-profile.html
+++ b/public/users-profile.html
@@ -31,7 +31,8 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-
+  <script type="module" src="assets/js/dashboard.js"></script>
+  <script type="module" src="assets/js/firebase.js"></script>
 </head>
 
 <body>
@@ -41,7 +42,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="dashboard.html" class="logo d-flex align-items-center">
-        <img src="assets/images/absa-logo.png">
+        <img src="assets/images/absa-logo.png" alt="">
         <span class="d-none d-lg-block">AbsaCapital</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -63,25 +64,27 @@
           </a>
         </li><!-- End Search Icon-->
 
+
+
+
         <li class="nav-item ">
           <p></p>
           <h6 class="fw-medium text-primary-emphasis"> Account number: <br>
-            <span class="fw-light text-secondary-emphasis">858967656757567</span>
+            <span class="fw-light text-secondary-emphasis" id="account-number-sidebar"></span>
             </h3>
         </li>
-
 
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/images/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourName">           </span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6 id="yourEmail"></h6>
+              <span id="account-number-dropdown"></span>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -118,7 +121,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="pages-login.html">
+              <a class="dropdown-item d-flex align-items-center" href="#">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
